feat(integrations): establish event reliability gate